--- a/ideas/templates/ideas/index.html
+++ b/ideas/templates/ideas/index.html
@@ -1,9 +1,15 @@
-{% if user_ideas %}
-    <ul>
-        {% for idea in user_ideas %}
-            <li><a href="{% url 'ideas:detail' idea.id %}">{{ idea.label }}</a></li>
-        {% endfor %}
-    </ul>
-{% else %}
-    <p>No ideas yet, let's come up with one!</p>
-{% endif %}
+{% extends "ideas/template.html" %}
+
+{% block title %}Invigorate | Ideas{% endblock %}
+
+{% block content %}
+    {% if user_ideas %}
+        <ul>
+            {% for idea in user_ideas %}
+                <li><a href="{% url 'ideas:detail' idea.id %}">{{ idea.label }}</a></li>
+            {% endfor %}
+        </ul>
+    {% else %}
+        <p>No ideas yet, let's come up with one!</p>
+    {% endif %}
+{% endblock %}
